Fix KisPopupButton popups showing on wrong screen

By making them fall back to the monitor that the button is on when the
frame doesn't have a monitor set, rather than throwing them to the
primary monitor.

BUG:399347